Updated saving textarea and update ReadMe

--- a/index.html
+++ b/index.html
@@ -30,31 +30,31 @@
     </header>
     <div class="container">
       <div class="div1 time-block hour row">8:00 AM</div>
-      <textarea class="div2 description row"></textarea>
-      <button class="div3 saveBtn row">🖫 </button>
+      <textarea class="div2 row" id = "Text1"></textarea>
+      <button class="div3 saveBtn btn-row row">🖫</button>
       <div class="div4 time-block hour row">9:00 AM</div>
-      <textarea class="div5 description row"></textarea>
+      <textarea class="div5 row" id = "Text2"></textarea>
       <button class = "div6 saveBtn row">🖫</button>
       <div class="div7 time-block hour row">10:00 AM</div>
-      <textarea class="div8 row"> </textarea>
+      <textarea class="div8 row" id = "Text3"> </textarea>
       <button class = "div9 saveBtn row">🖫</button>
       <div class="div10 time-block hour row">11:00 AM</div>
-      <textarea class="div11 row"> </textarea>
+      <textarea class="div11 row" id = "Text4"> </textarea>
       <button class = "div12 saveBtn row">🖫</button>
       <div class="div13 time-block hour row">12:00 PM</div>
-      <textarea class="div14 row"> </textarea>
+      <textarea class="div14 row" id = "Text5"> </textarea>
       <button class = "div15 saveBtn row">🖫</button>
       <div class="div16 time-block hour row">1:00 PM</div>
-      <textarea class="div17 row"> </textarea>
+      <textarea class="div17 row" id = "Text6"> </textarea>
       <button class = "div18 saveBtn row">🖫</button>
       <div class="div19 time-block hour row">2:00 PM</div>
-      <textarea class="div20 row"> </textarea>
+      <textarea class="div20 row" id = "Text7"> </textarea>
       <button class = "div21 saveBtn row">🖫</button> 
-      <div class="div22 time-block hour row">3:00 PM</div>
-      <textarea class="div23 row"> </textarea>
+      <div class="div22 time-block hour row">8:00 PM</div>
+      <textarea class="div23 row" id = "Text8"> </textarea>
       <button class = "div24 saveBtn row">🖫</button>
-      <div class="div25 time-block hour row">4:00 PM</div>
-      <textarea class="div26 row"> </textarea>
+      <div class="div25 time-block hour row">9:00 PM</div>
+      <textarea class="div26 row" id = "Text9"> </textarea>
       <button class = "div27 saveBtn row">🖫</button>
     
     </div>
